monitoring/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.org/server-snippets: |
      gzip on;
      gzip_http_version 1.1;
      gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
spec:
  tls:
  - hosts:
    - "grafana.alpinadigital.rocks"
    secretName: grafana-certificate-secret
  rules:
  - host: "grafana.alpinadigital.rocks"
    http:
      paths:
      - path: /
        backend:
          serviceName: grafana
          servicePort: 3000
